cmd/kubetype-gen/testdata/test_input/negative/defaults/emptygroup/type.go
package emptygroup

// Test is for test
// +kubetype-gen
type Test struct {
	Field string
}
